--- a/cc.newspring.cybersource/.gitignore
+++ b/cc.newspring.cybersource/.gitignore
@@ -1,2 +1,41 @@
 /bin/
 /obj/
+/AjaxControlToolkit.dll
+/C5.dll
+/DDay.iCal.dll
+/DotLiquid.dll
+/EPPlus.dll
+/EPPlus.xml
+/EntityFramework.SqlServer.dll
+/EntityFramework.SqlServer.xml
+/EntityFramework.dll
+/EntityFramework.xml
+/Facebook.dll
+/Facebook.xml
+/HtmlAgilityPack.dll
+/HtmlAgilityPack.pdb
+/HtmlAgilityPack.xml
+/ImageResizer.dll
+/ImageResizer.xml
+/Newtonsoft.Json.dll
+/Newtonsoft.Json.xml
+/NuGet.Core.dll
+/Quartz.dll
+/RestSharp.dll
+/RestSharp.xml
+/Rock.CyberSource.dll
+/Rock.CyberSource.pdb
+/Rock.Version.dll
+/Rock.Version.pdb
+/Rock.dll
+/Rock.pdb
+/Rock.xml
+/System.Net.Http.Formatting.dll
+/System.Net.Http.Formatting.xml
+/System.Web.Http.WebHost.dll
+/System.Web.Http.WebHost.xml
+/System.Web.Http.dll
+/System.Web.Http.xml
+/Twilio.Api.dll
+/Twilio.Api.pdb
+/Twilio.Api.xml
