--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\cc.newspring.cybersource\packages.config" />
   <repository path="..\org.RockSolidChurch.SampleProject\packages.config" />
   <repository path="..\org.RockSolidChurch\packages.config" />
   <repository path="..\RockWeb\packages.config" />
