--- a/cc.newspring.cybersource/cc.newspring.cybersource.csproj
+++ b/cc.newspring.cybersource/cc.newspring.cybersource.csproj
@@ -58,14 +58,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Gateway.cs" />
+    <Compile Include="Data\Gateway.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="ITransactionProcessor.cs" />
+    <Compile Include="Data\ITransactionProcessor.cs" />
     <Compile Include="Reporting\Api.cs" />
   </ItemGroup>
   <ItemGroup>
