--- a/cc.newspring.give/cc.newspring.give.csproj
+++ b/cc.newspring.give/cc.newspring.give.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{496EC024-71ED-4AD1-B677-2A3FA60CCD05}</ProjectGuid>
+    <ProjectGuid>{83775A9E-0455-4801-B1EF-DC70D786D09B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>org.RockSolidChurch.SampleProject</RootNamespace>
-    <AssemblyName>org.RockSolidChurch.SampleProject</AssemblyName>
+    <RootNamespace>cc.newspring.give</RootNamespace>
+    <AssemblyName>cc.newspring.give</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -95,13 +95,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\SampleProjectContext.cs" />
-    <Compile Include="Data\SampleProjectService.cs" />
+    <Compile Include="Data\GiveContext.cs" />
+    <Compile Include="Data\GiveService.cs" />
     <Compile Include="Migrations\001_CreateDb.cs" />
     <Compile Include="Model\Book.cs" />
     <Compile Include="Model\BookService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rest\BooksController.cs" />
+    <Compile Include="Rest\GiveController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -109,7 +109,12 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <ProjectReference Include="..\org.RockSolidChurch\org.RockSolidChurch.csproj">
+    <ProjectReference Include="..\cc.newspring\cc.newspring.csproj">
+      <Project>{496ec024-71ed-4ad1-b677-2a3fa60ccd05}</Project>
+      <Name>cc.newspring</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="cc.newspring.give.csproj">
       <Project>{83775a9e-0455-4801-b1ef-dc70d786d09b}</Project>
       <Name>org.RockSolidChurch</Name>
     </ProjectReference>
