--- a/cc.newspring.give/cc.newspring.give.csproj
+++ b/cc.newspring.give/cc.newspring.give.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{83775A9E-0455-4801-B1EF-DC70D786D09B}</ProjectGuid>
+    <ProjectGuid>{BA60AFE4-4A42-4F30-AD68-7FBE93657C8B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>cc.newspring.give</RootNamespace>
@@ -95,28 +95,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\GiveContext.cs" />
-    <Compile Include="Data\GiveService.cs" />
+    <Compile Include="Data\SampleProjectContext.cs" />
+    <Compile Include="Data\SampleProjectService.cs" />
     <Compile Include="Migrations\001_CreateDb.cs" />
     <Compile Include="Model\Book.cs" />
     <Compile Include="Model\BookService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rest\GiveController.cs" />
+    <Compile Include="Rest\BooksController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\cc.newspring\cc.newspring.csproj">
       <Project>{496ec024-71ed-4ad1-b677-2a3fa60ccd05}</Project>
       <Name>cc.newspring</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="cc.newspring.give.csproj">
-      <Project>{83775a9e-0455-4801-b1ef-dc70d786d09b}</Project>
-      <Name>org.RockSolidChurch</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
