--- a/cc.newspring/cc.newspring.csproj
+++ b/cc.newspring/cc.newspring.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{496EC024-71ED-4AD1-B677-2A3FA60CCD05}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>org.RockSolidChurch</RootNamespace>
-    <AssemblyName>org.RockSolidChurch</AssemblyName>
+    <RootNamespace>cc.newspring</RootNamespace>
+    <AssemblyName>cc.newspring</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
