--- a/cc.newspring/cc.newspring.csproj
+++ b/cc.newspring/cc.newspring.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\Model.cs" />
+    <Compile Include="Data\NamedModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
