--- a/cc.newspring/cc.newspring.csproj
+++ b/cc.newspring/cc.newspring.csproj
@@ -68,6 +68,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy /Y "$(TargetDir)$(TargetName).dll" "$(SolutionDir)RockWeb\Bin\$(TargetName).dll"</PostBuildEvent>
