--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\org.RockSolidChurch.SampleProject\packages.config" />
-  <repository path="..\org.RockSolidChurch\packages.config" />
+  <repository path="..\cc.newspring.give\packages.config" />  
   <repository path="..\RockWeb\packages.config" />
 </repositories>
