Change to v12 after update

--- a/RockWeb/web.connectionstrings.config
+++ b/RockWeb/web.connectionstrings.config
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <connectionStrings>
-  <add name="RockContext" connectionString="Server=(localdb)\Projects; Initial Catalog=RockChMS;
+  <add name="RockContext" connectionString="Server=(localdb)\ProjectsV12; Initial Catalog=RockChMS;
   Integrated Security=true; MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
 </connectionStrings>
