Update build from develop

--- a/cc.newspring.Apollos/cc.newspring.Apollos.csproj
+++ b/cc.newspring.Apollos/cc.newspring.Apollos.csproj
@@ -34,6 +34,9 @@
     <Reference Include="BCrypt.Net">
       <HintPath>..\packages\BCrypt-Official.0.1.109\lib\BCrypt.Net.dll</HintPath>
     </Reference>
+    <Reference Include="DotLiquid">
+      <HintPath>..\RockWeb\Bin\DotLiquid.dll</HintPath>
+    </Reference>
     <Reference Include="Rock">
       <HintPath>..\RockWeb\Bin\Rock.dll</HintPath>
     </Reference>
