--- a/cc.newspring.Apollos/cc.newspring.Apollos.csproj
+++ b/cc.newspring.Apollos/cc.newspring.Apollos.csproj
@@ -64,8 +64,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy /y "$(SolutionDir)cc.newspring.Apollos\bin\cc.newspring.Apollos.dll" "$(SolutionDir)RockWeb\Plugins\cc_newspring\Apollos\"
-copy /y "$(SolutionDir)cc.newspring.Apollos\bin\BCrypt.Net.dll" "$(SolutionDir)RockWeb\Plugins\cc_newspring\Apollos\"</PostBuildEvent>
+    <PostBuildEvent>copy /Y "$(SolutionDir)cc.newspring.Apollos\bin\cc.newspring.Apollos.dll" "$(SolutionDir)RockWeb\Plugins\cc_newspring\Apollos\"
+copy /Y "$(SolutionDir)cc.newspring.Apollos\bin\BCrypt.Net.dll" "$(SolutionDir)RockWeb\Plugins\cc_newspring\Apollos\"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
