--- a/cc.newspring.Apollos/cc.newspring.Apollos.csproj
+++ b/cc.newspring.Apollos/cc.newspring.Apollos.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApollosSync.cs" />
     <Compile Include="Security\Authentication\Apollos.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
