Fix error on null Type

--- a/cc.newspring.Apollos/cc.newspring.Apollos.csproj
+++ b/cc.newspring.Apollos/cc.newspring.Apollos.csproj
@@ -76,8 +76,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy /Y /R "$(SolutionDir)cc.newspring.Apollos\bin\cc.newspring.Apollos.dll" "$(SolutionDir)RockWeb\Plugins\cc_newspring\Apollos\"
-xcopy /Y /R "$(SolutionDir)cc.newspring.Apollos\bin\BCrypt.Net.dll" "$(SolutionDir)RockWeb\Plugins\cc_newspring\Apollos\"</PostBuildEvent>
+    <PostBuildEvent>xcopy /Y /R "$(SolutionDir)cc.newspring.Apollos\bin\cc.newspring.Apollos.dll" "$(SolutionDir)RockWeb\bin"
+xcopy /Y /R "$(SolutionDir)cc.newspring.Apollos\bin\BCrypt.Net.dll" "$(SolutionDir)RockWeb\bin"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
